--- a/src/components/MoviesSearch/MoviesSearchForm/movies-search-form.module.css
+++ b/src/components/MoviesSearch/MoviesSearchForm/movies-search-form.module.css
@@ -2,11 +2,27 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  gap: 16px;
+  gap: 8px;
 }
 
 .fieldGroup {
   display: flex;
   align-items: center;
   gap: 5px;
+}
+
+.input {
+  margin-top: 20px;
+  width: 300px;
+  height: 36px;
+  border-radius: 50px;
+  padding-left: 14px;
+  font-size: 20px;
+}
+
+.searchbtn {
+  margin-top: 20px;
+  border-radius: 50px;
+  padding: 10px;
+  border: none;
 }
