--- a/src/pages/NotFoundPage/not-found-page.module.css
+++ b/src/pages/NotFoundPage/not-found-page.module.css
@@ -1,13 +1,34 @@
+.notFoundDiv {
+  justify-content: center;
+  height: 500px;
+  text-align: center;
+}
+
+.src {
+  color: rgb(92, 92, 92);
+  font-size: 170px;
+  margin-bottom: 0.1px;
+}
+
 .text {
-  padding: 10px 15px;
+  /* padding: 10px 15px; */
   text-decoration: none;
-  color: red;
-  font-size: 32px;
+  color: darkslategray;
+  font-size: 72px;
   font-weight: bold;
 }
 
 .link {
-  padding: 10px 15px;
-  color: blue;
-  font-size: 18px;
+  border: 2px solid white;
+  border-radius: 40px;
+  padding: 15px 25px;
+  color: darkslategray;
+  font-size: 28px;
+  font-weight: 640;
+  text-decoration: dotted;
+}
+
+.link:hover {
+  font-size: 32px;
+  border: 7px solid wheat;
 }
