--- a/src/components/Reviews/reviews.module.css
+++ b/src/components/Reviews/reviews.module.css
@@ -1,7 +1,7 @@
 .reviewsContainer {
   padding: 20px 60px;
   flex-direction: column;
-  align-items: flex-start;
+  /* align-items: flex-start; */
 }
 
 .reviewAuthor {
