--- a/src/components/MoviesSearch/MoviesSearchForm/movies-search-form.module.css
+++ b/src/components/MoviesSearch/MoviesSearchForm/movies-search-form.module.css
@@ -1,13 +1,13 @@
 .form {
   display: flex;
   justify-content: left;
-  align-items: center;
+  /* align-items: center; */
   gap: 8px;
 }
 
 .fieldGroup {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   gap: 5px;
 }
 
