--- a/src/components/Cast/cast.module.css
+++ b/src/components/Cast/cast.module.css
@@ -15,6 +15,10 @@
   flex-direction: column;
 }
 
+.actorInfo {
+  border: 3px solid red;
+}
+
 .actorImage {
   width: 280px;
   /* height: 160px; */
